# Graph-Algorithms

./: .gitignore  Algorithms.cpp  Algorithms.h  CMakeLists.txt  ConnectedComponent.cpp  ConnectedComponent.h  Generator.cpp  Generator.h  Graph.cpp  Graph.h  Makefile  README.md  Vertex.cpp  Vertex.h  in_out.cpp  in_out.h  main.cpp
Algorithm/: AlgorithmLogic.cpp  AlgorithmLogic.h  Implementation.cpp  Implementation.h
DataStructure/: Clique.cpp  Clique.h  ConnectedComponent.cpp  ConnectedComponent.h  Graph.cpp  Graph.h  GraphStatisticsTimes.cpp  GraphStatisticsTimes.h  MSTgraph.cpp  MSTgraph.h  Vertex.cpp  Vertex.h
Generator/: Generator.cpp  Generator.h
InOut/: InOut.cpp  InOut.h
Messages/: Messages.h
ProgramLogic/: ProgramLogic.cpp  ProgramLogic.h
algorithm/: AlgorithmLogic.cpp  AlgorithmLogic.h  Algorithms.cpp  Algorithms.h  Implementation.cpp  Implementation.h
data_structure/: ConnectedComponent.cpp  Graph.cpp  Graph.h  GraphStatisticsTimes.cpp  GraphStatisticsTimes.h  MSTgraph.cpp  MSTgraph.h  Vertex.cpp  Vertex.h
generator/: Generator.cpp  Generator.h
in_out/: InOut.cpp  InOut.h  in_out.cpp  in_out.h
messages/: Messages.h
program_logic/: ProgramLogic.cpp  ProgramLogic.h
